@@ -342,6 +342,12 @@
 </property>
 
 <property>
+  <name>hive.hwi.war.file</name>
+  <value>lib/hive-hwi-@VERSION@.war</value>
+  <description>This sets the path to the HWI war file, relative to ${HIVE_HOME}. </description>
+</property>
+
+<property>
   <name>hive.hwi.listen.host</name>
   <value>0.0.0.0</value>
   <description>This is the host address the Hive Web Interface will listen on</description>
