@@ -483,6 +483,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1140. Fix incorrect ambiguous column reference error message.
     (Paul Yang via zshao)
 
+    HIVE-1183. hive.hwi.war.file vanished from hive-default.xml
+    (Zheng Shao via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
